# findmaistyle

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: plan_de_implementacion.md  setup_poetry.md  setup_workspace.md
notebooks/: validate_env.ipynb
notebooks/.ipynb_checkpoints/: validate_env-checkpoint.ipynb
scripts/: check_env.py
scripts/processed/: README.md
